--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
         <li>laser pointers</li>
         <li>lasagna</li>
       </ul>
-      <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/lasagna.jpg" alt="A slice of lasagna on a plate.">
-    </section>
+      <figure>
+        <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/lasagna.jpg" alt="A slice of lasagna on a plate.">
+      </figure>
     </main>
 </body>
 </html>
