--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
         <li>thunder</li>
        <li>other cats</li>
       </ol>
-      <figure> <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/cats.jpg" alt="Five cats looking around a field."></figure>
+      <figure> <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/cats.jpg" alt="Five cats looking around a field.">
+       <figcaption>Cats hate other cats.</figcaption>
+      </figure>
     </main>
 </body>
 </html>
