--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
        <li>other cats</li>
       </ol>
       <figure> <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/cats.jpg" alt="Five cats looking around a field.">
-       <figcaption>Cats hate other cats.</figcaption>
+       <figcaption>Cats <strong>hate</strong> other cats.</figcaption>
       </figure>
     </main>
 </body>
