--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
       <figure> <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/cats.jpg" alt="Five cats looking around a field.">
        <figcaption>Cats <strong>hate</strong> other cats.</figcaption>
       </figure>
+      </section>
+      <section>
+        
+      </section>
     </main>
 </body>
 </html>
