--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <section>
         <h2>Cat Form</h2>
         <form action="https://freecatphotoapp.com/submit-cat-photo">
-          <button>Submit</button>
+          <button type="submit">Submit</button>
         </form>
       </section>
     </main>
