--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
           </fieldset>
           <fieldset>
             <legend>What's your cat's personality?</legend>
-            <input id="loving" type="checkbox"> Loving
+            <input id="loving" type="checkbox"> 
+            <label for="loving"> Loving </label>
           </fieldset>
           <input type="text" name="catphotourl" placeholder="cat photo URL" required>
           <button type="submit">Submit</button>
