--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
             <label for="loving"> Loving </label>
             <input id="lazy" type="checkbox" name="personality"> 
             <label for="lazy"> Lazy </label>
+            <input id="energetic" type="checkbox" name="personality"> 
+            <label for="energetic"> Energetic </label>
           </fieldset>
           <input type="text" name="catphotourl" placeholder="cat photo URL" required>
           <button type="submit">Submit</button>
