--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       </section>
     </main>
     <footer>
-      
+      <p>No Copyright - freeCodeCamp.org</p>
     </footer>
 </body>
 </html>
